Update HTML structure and course sections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia de Cursos Tecnológicos</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -22,22 +22,46 @@
     <main>
         <section>
             <h2>Impulsa tu futuro con nuestros cursos tecnológicos</h2>
-            <img src="imagenes/banner-tecnologia.jpg" alt="Banner de tecnología" width="800">
+            <img src="banner-tecnologia.jpg" alt="Banner de tecnología" width="800">
             <p>En la Academia de Cursos Tecnológicos, te brindamos las herramientas y el conocimiento necesario para destacar en el mundo de la tecnología.</p>
             <p>Ofrecemos cursos prácticos y actualizados, diseñados para que aprendas de forma efectiva y puedas aplicar tus habilidades en proyectos reales.</p>
             <a href="servicios.html" class="button">Descubre nuestros cursos</a>
         </section>
         <section>
-            <h3>Cursos destacados</h3>
-            <ul>
-                <li>Desarrollo Web Full Stack</li>
-                <li>Marketing Digital</li>
-                <li>Ciencia de Datos</li>
-            </ul>
+            <h3>Nuestros Cursos Más Populares</h3>
+            <div class="curso">
+                <img src="curso-desarrollo-web.jpg.jpg" alt="Curso de Desarrollo Web" width="300">
+                <h4>Desarrollo Web Full Stack</h4>
+                <p>Aprende a crear sitios web dinámicos y aplicaciones web completas con las últimas tecnologías.</p>
+                <a href="servicios.html" class="button">Más información</a>
+            </div>
+            <div class="curso">
+                <img src="curso-marketing-digital.jpg.jpg" alt="Curso de Marketing Digital" width="300">
+                <h4>Marketing Digital</h4>
+                <p>Domina las estrategias de marketing online y aumenta la visibilidad de tu negocio en internet.</p>
+                <a href="servicios.html" class="button">Más información</a>
+            </div>
+            <div class="curso">
+                <img src="curso-ciencia-datos.jpg.jpg" alt="Curso de Ciencia de Datos" width="300">
+                <h4>Ciencia de Datos</h4>
+                <p>Descubre el poder de los datos y aprende a analizarlos para tomar decisiones inteligentes.</p>
+                <a href="servicios.html" class="button">Más información</a>
+            </div>
+        </section>
+        <section>
+            <h3>Testimonios</h3>
+            <div class="testimonio">
+                <img src="testimonio-1.jpg" alt="Testimonio de Juan Pérez" width="100">
+                <p>"Gracias a la Academia, conseguí mi primer trabajo como desarrollador web. ¡Los cursos son excelentes!" - Juan Pérez</p>
+            </div>
+            <div class="testimonio">
+                <img src="testimonio-2.jpg" alt="Testimonio de María García" width="100">
+                <p>"El curso de marketing digital me ayudó a aumentar las ventas de mi tienda online. ¡Lo recomiendo totalmente!" - María García</p>           
+            </div>
         </section>
     </main>
     <footer>
         <p>&copy; 2026 Academia de Cursos Tecnológicos</p>
     </footer>
 </body>
-</html>
+</html
