Update stylesheet link and add team section

--- a/informacion.html
+++ b/informacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información del Sistema</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -23,6 +23,8 @@
         <section>
             <h2>Información del Sistema Web</h2>
             <p>Este sistema web ha sido diseñado para facilitar el acceso a la información de nuestros cursos, gestionar inscripciones y ofrecer recursos adicionales a nuestros estudiantes.</p>
+        </section>
+        <section>
             <h3>Características principales:</h3>
             <ul>
                 <li>Catálogo de cursos detallado</li>
@@ -30,9 +32,32 @@
                 <li>Acceso a materiales de estudio</li>
                 <li>Información de contacto y soporte</li>
             </ul>
+            <img src="interfaz-web.jpg.jpg" alt="Interfaz del sistema web" width="600">
+        </section>
+        <section>
             <h3>Tecnologías utilizadas:</h3>
             <p>El sistema ha sido desarrollado utilizando HTML, CSS y JavaScript, garantizando una experiencia de usuario óptima y un diseño responsivo.</p>
-            <img src="imagenes/codigo-html.png" alt="Código HTML" width="400">
+            <div class="tecnologias">
+                <img src="html5.png.png" alt="HTML5" width="100">
+                <img src="css3.png.png" alt="CSS3" width="100">
+                <img src="javascript.png" alt="JavaScript" width="100">
+            </div>
+        </section>
+        <section>
+            <h3>Nuestro equipo de desarrollo</h3>
+            <p>Contamos con un equipo de profesionales altamente capacitados y comprometidos con la excelencia en el desarrollo web.</p>
+            <div class="equipo">
+                <div class="miembro">
+                    <img src="desarrollador-1.jpg" alt="Desarrollador 1" width="100">
+                    <h4>Juan Pérez</h4>
+                    <p>Desarrollador Front-end</p>
+                </div>
+                <div class="miembro">
+                    <img src="desarrolladora-2.jpg" alt="Desarrolladora 2" width="100">
+                    <h4>María García</h4>
+                    <p>Desarrolladora Back-end</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
