Revamp servicios.html with new content and structure
Updated the stylesheet link and added sections for featured courses, instructors, and testimonials.

--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -23,32 +23,52 @@
         <section>
             <h2>Nuestros Cursos y Servicios</h2>
             <p>Descubre los cursos y servicios que ofrecemos para impulsar tu carrera en el mundo de la tecnología.</p>
-            
+        </section>
+
+        <section>
             <h3>Cursos Destacados</h3>
-            <ul>
-                <li>
-                    <h4>Desarrollo Web Full Stack</h4>
-                    <p>Aprende a crear aplicaciones web completas, desde el frontend hasta el backend. Domina HTML, CSS, JavaScript, Node.js y bases de datos.</p>
-                    <img src="imagenes/curso-web.jpg" alt="Curso de Desarrollo Web" width="200">
-                </li>
-                <li>
-                    <h4>Marketing Digital</h4>
-                    <p>Conviértete en un experto en marketing online. Aprende SEO, SEM, redes sociales, email marketing y analítica web.</p>
-                    <img src="imagenes/curso-marketing.jpg" alt="Curso de Marketing Digital" width="200">
-                </li>
-                <li>
-                    <h4>Ciencia de Datos</h4>
-                    <p>Descubre el poder de los datos. Aprende a analizar, visualizar y modelar datos utilizando Python, R y herramientas de machine learning.</p>
-                    <img src="imagenes/curso-datos.jpg" alt="Curso de Ciencia de Datos" width="200">
-                </li>
-            </ul>
-            
-            <h3>Otros Servicios</h3>
-            <ul>
-                <li>Asesorías personalizadas</li>
-                <li>Talleres prácticos</li>
-                <li>Eventos y webinars</li>
-            </ul>
+            <div class="curso-destacado">
+                <img src="curso-desarrollo-web.jpg.jpg" alt="Curso de Desarrollo Web" width="300">
+                <h4>Desarrollo Web Full Stack</h4>
+                <p>Aprende a crear aplicaciones web completas, desde el frontend hasta el backend. Domina HTML, CSS, JavaScript, Node.js y bases de datos.</p>
+                <a href="#" class="button">Inscribirse</a>
+            </div>
+            <div class="curso-destacado">
+                <img src="curso-marketing-digital.jpg.jpg" alt="Curso de Marketing Digital" width="300">
+                <h4>Marketing Digital</h4>
+                <p>Conviértete en un experto en marketing online. Aprende SEO, SEM, redes sociales, email marketing y analítica web.</p>
+                <a href="#" class="button">Inscribirse</a>
+            </div>
+            <div class="curso-destacado">
+                <img src="curso-ciencia-datos.jpg.jpg" alt="Curso de Ciencia de Datos" width="300">
+                <h4>Ciencia de Datos</h4>
+                <p>Descubre el poder de los datos. Aprende a analizar, visualizar y modelar datos utilizando Python, R y herramientas de machine learning.</p>
+                <a href="#" class="button">Inscribirse</a>
+            </div>
+        </section>
+
+        <section>
+            <h3>Nuestros Instructores Expertos</h3>
+            <div class="instructor">
+                <img src="instructor-1.jpg" alt="Instructor Juan Pérez" width="150">
+                <h4>Juan Pérez</h4>
+                <p>Especialista en Desarrollo Web</p>
+            </div>
+            <div class="instructor">
+                <img src="instructora-2.jpg" alt="Instructora María García" width="150">
+                <h4>María García</h4>
+                <p>Especialista en Marketing Digital</p>
+            </div>
+        </section>
+
+        <section>
+            <h3>Testimonios de Estudiantes</h3>
+            <div class="testimonio">
+                <p>"Gracias a este curso, conseguí un ascenso en mi trabajo. ¡Lo recomiendo!" - Carlos López</p>
+            </div>
+            <div class="testimonio">
+                <p>"Los instructores son excelentes y el contenido es muy práctico. ¡Me encantó!" - Ana Rodríguez</p>
+            </div>
         </section>
     </main>
     <footer>
