correccion de estructura

--- a/acerca.html
+++ b/acerca.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de Nosotros</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
@@ -36,17 +36,17 @@
             <p>Conoce a los fundadores y líderes de nuestra academia, apasionados por la tecnología y la educación.</p>
             <div class="equipo">
                 <div class="team-member">
-                    <img src="ismael.jpg" alt="Ismael Issac Paredes Niles" width="150">
+                    <img src="imagenes/ismael.jpg" alt="Ismael Issac Paredes Niles" width="150">
                     <h4>Ismael Issac Paredes Niles</h4>
                     <p>Co-fundador y Director Ejecutivo</p>
                 </div>
                 <div class="team-member">
-                    <img src="bryan.jpg" alt="Bryan Damian Cedeño Pincay" width="150">
+                    <img src="imagenes/bryan.jpg" alt="Bryan Damian Cedeño Pincay" width="150">
                     <h4>Bryan Damian Cedeño Pincay</h4>
                     <p>Co-fundador y Director Académico</p>
                 </div>
                 <div class="team-member">
-                    <img src="elkin.jpg" alt="Elkin Naranjo Mosquera" width="150">
+                    <img src="imagenes/elkin.jpg" alt="Elkin Naranjo Mosquera" width="150">
                     <h4>Elkin Naranjo Mosquera</h4>
                     <p>Co-fundador y Director de Marketing</p>
                 </div>
