--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
             <p>Estamos aquí para responder tus preguntas. ¡No dudes en ponerte en contacto con nosotros!</p>
 
             <div class="contacto-form">
-                <img src="contacto-imagen.jpg.jpg" alt="Imagen de contacto" width="400">
+                <img src="imagenes/contacto-imagen.jpg.jpg" alt="Imagen de contacto" width="400">
                 <form action="#" method="post">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
@@ -45,15 +45,15 @@
             <h3>Información de Contacto Adicional</h3>
             <div class="contacto-info">
                 <div class="info-item">
-                    <img src="direccion-icono.png" alt="Dirección" width="30">
+                    <img src="imagenes/direccion-icono.png" alt="Dirección" width="30">
                     <p>Dirección: Calle Principal, 123</p>
                 </div>
                 <div class="info-item">
-                    <img src="telefono-icono.png" alt="Teléfono" width="30">
+                    <img src="imagenes/telefono-icono.png" alt="Teléfono" width="30">
                     <p>Teléfono: (123) 456-7890</p>
                 </div>
                 <div class="info-item">
-                    <img src="email-icono.png" alt="Email" width="30">
+                    <img src="imagenes/email-icono.png" alt="Email" width="30">
                     <p>Email: info@academia.com</p>
                 </div>
             </div>
