--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
@@ -28,19 +28,19 @@
         <section>
             <h3>Cursos Destacados</h3>
             <div class="curso-destacado">
-                <img src="curso-desarrollo-web.jpg.jpg" alt="Curso de Desarrollo Web" width="300">
+                <img src="imagenes/curso-desarrollo-web.jpg.jpg" alt="Curso de Desarrollo Web" width="300">
                 <h4>Desarrollo Web Full Stack</h4>
                 <p>Aprende a crear aplicaciones web completas, desde el frontend hasta el backend. Domina HTML, CSS, JavaScript, Node.js y bases de datos.</p>
                 <a href="#" class="button">Inscribirse</a>
             </div>
             <div class="curso-destacado">
-                <img src="curso-marketing-digital.jpg.jpg" alt="Curso de Marketing Digital" width="300">
+                <img src="imagenes/curso-marketing-digital.jpg.jpg" alt="Curso de Marketing Digital" width="300">
                 <h4>Marketing Digital</h4>
                 <p>Conviértete en un experto en marketing online. Aprende SEO, SEM, redes sociales, email marketing y analítica web.</p>
                 <a href="#" class="button">Inscribirse</a>
             </div>
             <div class="curso-destacado">
-                <img src="curso-ciencia-datos.jpg.jpg" alt="Curso de Ciencia de Datos" width="300">
+                <img src="imagenes/curso-ciencia-datos.jpg.jpg" alt="Curso de Ciencia de Datos" width="300">
                 <h4>Ciencia de Datos</h4>
                 <p>Descubre el poder de los datos. Aprende a analizar, visualizar y modelar datos utilizando Python, R y herramientas de machine learning.</p>
                 <a href="#" class="button">Inscribirse</a>
@@ -50,12 +50,12 @@
         <section>
             <h3>Nuestros Instructores Expertos</h3>
             <div class="instructor">
-                <img src="instructor-1.jpg" alt="Instructor Juan Pérez" width="150">
+                <img src="imagenes/instructor-1.jpg" alt="Instructor Juan Pérez" width="150">
                 <h4>Juan Pérez</h4>
                 <p>Especialista en Desarrollo Web</p>
             </div>
             <div class="instructor">
-                <img src="instructora-2.jpg" alt="Instructora María García" width="150">
+                <img src="imagenes/instructora-2.jpg" alt="Instructora María García" width="150">
                 <h4>María García</h4>
                 <p>Especialista en Marketing Digital</p>
             </div>
