--- a/informacion.html
+++ b/informacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información del Sistema</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
@@ -38,9 +38,9 @@
             <h3>Tecnologías utilizadas:</h3>
             <p>El sistema ha sido desarrollado utilizando HTML, CSS y JavaScript, garantizando una experiencia de usuario óptima y un diseño responsivo.</p>
             <div class="tecnologias">
-                <img src="html5.png.png" alt="HTML5" width="100">
-                <img src="css3.png.png" alt="CSS3" width="100">
-                <img src="javascript.png" alt="JavaScript" width="100">
+                <img src="imagenes/html5.png.png" alt="HTML5" width="100">
+                <img src="imagenes/css3.png.png" alt="CSS3" width="100">
+                <img src="imagenes/javascript.png" alt="JavaScript" width="100">
             </div>
         </section>
         <section>
@@ -48,12 +48,12 @@
             <p>Contamos con un equipo de profesionales altamente capacitados y comprometidos con la excelencia en el desarrollo web.</p>
             <div class="equipo">
                 <div class="miembro">
-                    <img src="desarrollador-1.jpg" alt="Desarrollador 1" width="100">
+                    <img src="imagenes/desarrollador-1.jpg" alt="Desarrollador 1" width="100">
                     <h4>Juan Pérez</h4>
                     <p>Desarrollador Front-end</p>
                 </div>
                 <div class="miembro">
-                    <img src="desarrolladora-2.jpg" alt="Desarrolladora 2" width="100">
+                    <img src="imagenes/desarrolladora-2.jpg" alt="Desarrolladora 2" width="100">
                     <h4>María García</h4>
                     <p>Desarrolladora Back-end</p>
                 </div>
