--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia de Cursos Tecnológicos</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="icon" href="imagenes/logo.png" type="image/png">
 </head>
 <body>
     <header>
