--- a/acerca.html
+++ b/acerca.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de Nosotros</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="icon" href="imagenes/logo.png" type="image/png">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
         <section>
             <h3>Nuestra Historia</h3>
             <p>Fundada en 2024 por Ismael Issac Paredes Niles, Bryan Damian Cedeño Pincay y Elkin Naranjo Mosquera, nuestra academia nació con el objetivo de democratizar el acceso a la educación tecnológica de calidad en Latinoamérica.</p>
-            <img src="academia-fundacion.jpg.jpg" alt="Fundación de la Academia" width="600">
+            <img src="academia-fundacion.jpg" alt="Fundación de la Academia" width="600">
         </section>
 
         <section>
@@ -63,7 +64,7 @@
                 <div class="vision">
                     <h4>Visión</h4>
                     <p>Ser la academia líder en educación tecnológica en Latinoamérica, reconocida por la excelencia académica y la innovación.</p>
-                    <img src="academia-vision.jpg.jpg" alt="Visión de la Academia" width="300">
+                    <img src="academia-vision.jpg" alt="Visión de la Academia" width="300">
                 </div>
             </div>
         </section>
