--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <section>
             <h3>Nuestros Cursos Más Populares</h3>
             <div class="curso">
-                <img src="imagenes/curso-desarrollo-web.jpg.jpg" alt="Curso de Desarrollo Web" width="300">
+                <img src="imagenes/curso-desarrollo-web.jpg" alt="Curso de Desarrollo Web" width="300">
                 <h4>Desarrollo Web Full Stack</h4>
                 <p>Aprende a crear sitios web dinámicos y aplicaciones web completas con las últimas tecnologías.</p>
                 <a href="servicios.html" class="button">Más información</a>
             </div>
             <div class="curso">
-                <img src="imagenes/curso-marketing-digital.jpg.jpg" alt="Curso de Marketing Digital" width="300">
+                <img src="imagenes/curso-marketing-digital.jpg" alt="Curso de Marketing Digital" width="300">
                 <h4>Marketing Digital</h4>
                 <p>Domina las estrategias de marketing online y aumenta la visibilidad de tu negocio en internet.</p>
                 <a href="servicios.html" class="button">Más información</a>
             </div>
             <div class="curso">
-                <img src="imagenes/curso-ciencia-datos.jpg.jpg" alt="Curso de Ciencia de Datos" width="300">
+                <img src="imagenes/curso-ciencia-datos.jpg" alt="Curso de Ciencia de Datos" width="300">
                 <h4>Ciencia de Datos</h4>
                 <p>Descubre el poder de los datos y aprende a analizarlos para tomar decisiones inteligentes.</p>
                 <a href="servicios.html" class="button">Más información</a>
