--- a/informacion.html
+++ b/informacion.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información del Sistema</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="icon" href="imagenes/logo.png" type="image/png">
 </head>
 <body>
     <header>
@@ -32,14 +33,14 @@
                 <li>Acceso a materiales de estudio</li>
                 <li>Información de contacto y soporte</li>
             </ul>
-            <img src="interfaz-web.jpg.jpg" alt="Interfaz del sistema web" width="600">
+            <img src="interfaz-web.jpg" alt="Interfaz del sistema web" width="600">
         </section>
         <section>
             <h3>Tecnologías utilizadas:</h3>
             <p>El sistema ha sido desarrollado utilizando HTML, CSS y JavaScript, garantizando una experiencia de usuario óptima y un diseño responsivo.</p>
             <div class="tecnologias">
-                <img src="imagenes/html5.png.png" alt="HTML5" width="100">
-                <img src="imagenes/css3.png.png" alt="CSS3" width="100">
+                <img src="imagenes/html5.png" alt="HTML5" width="100">
+                <img src="imagenes/css3.png" alt="CSS3" width="100">
                 <img src="imagenes/javascript.png" alt="JavaScript" width="100">
             </div>
         </section>
