--- a/servicios.html
+++ b/servicios.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="icon" href="imagenes/logo.png" type="image/png">
 </head>
 <body>
     <header>
@@ -28,19 +29,19 @@
         <section>
             <h3>Cursos Destacados</h3>
             <div class="curso-destacado">
-                <img src="imagenes/curso-desarrollo-web.jpg.jpg" alt="Curso de Desarrollo Web" width="300">
+                <img src="imagenes/curso-desarrollo-web.jpg" alt="Curso de Desarrollo Web" width="300">
                 <h4>Desarrollo Web Full Stack</h4>
                 <p>Aprende a crear aplicaciones web completas, desde el frontend hasta el backend. Domina HTML, CSS, JavaScript, Node.js y bases de datos.</p>
                 <a href="#" class="button">Inscribirse</a>
             </div>
             <div class="curso-destacado">
-                <img src="imagenes/curso-marketing-digital.jpg.jpg" alt="Curso de Marketing Digital" width="300">
+                <img src="imagenes/curso-marketing-digital.jpg" alt="Curso de Marketing Digital" width="300">
                 <h4>Marketing Digital</h4>
                 <p>Conviértete en un experto en marketing online. Aprende SEO, SEM, redes sociales, email marketing y analítica web.</p>
                 <a href="#" class="button">Inscribirse</a>
             </div>
             <div class="curso-destacado">
-                <img src="imagenes/curso-ciencia-datos.jpg.jpg" alt="Curso de Ciencia de Datos" width="300">
+                <img src="imagenes/curso-ciencia-datos.jpg" alt="Curso de Ciencia de Datos" width="300">
                 <h4>Ciencia de Datos</h4>
                 <p>Descubre el poder de los datos. Aprende a analizar, visualizar y modelar datos utilizando Python, R y herramientas de machine learning.</p>
                 <a href="#" class="button">Inscribirse</a>
