--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="icon" href="imagenes/logo.png" type="image/png">
 </head>
 <body>
     <header>
@@ -25,7 +26,7 @@
             <p>Estamos aquí para responder tus preguntas. ¡No dudes en ponerte en contacto con nosotros!</p>
 
             <div class="contacto-form">
-                <img src="imagenes/contacto-imagen.jpg.jpg" alt="Imagen de contacto" width="400">
+                <img src="imagenes/contacto-imagen.jpg" alt="Imagen de contacto" width="400">
                 <form action="#" method="post">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
@@ -62,7 +63,7 @@
         <section>
             <h3>Síguenos en Redes Sociales</h3>
             <div class="social-media">
-                <a href="#" target="_blank"><img src="facebook-icono.png.png" alt="Facebook" width="30"></a>
+                <a href="#" target="_blank"><img src="facebook-icono.png" alt="Facebook" width="30"></a>
                 <a href="#" target="_blank"><img src="twitter-icono.png" alt="Twitter" width="30"></a>
                 <a href="#" target="_blank"><img src="linkedin-icono.png" alt="LinkedIn" width="30"></a>
             </div>
