--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Academia de Cursos Tecnológicos</h1>
+        <img src="imagenes/logoencabezado.png" alt="Logo Academia Tech" class="logoencabezado">
+        <h2>Academia de Cursos Tecnológicos</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
