--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="icon" href="imagenes/logo.png" type="image/png">
 </head>
 <body>
-    <header>
-        <img src="imagenes/logoencabezado.png" alt="Logo Academia Tech" class="logoencabezado">
+    <header class="header">
+        <a href="index.html" class="logo-link">
+            <img src="imagenes/logoencabezado.png" alt="Logo Academia Tech" class="logoencabezado">
+        </a>
+
         <h2>Academia de Cursos Tecnológicos</h2>
+
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
                 <li><a href="informacion.html">Información</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
@@ -21,6 +24,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section>
             <h2>Impulsa tu futuro con nuestros cursos tecnológicos</h2>
