--- a/acerca.html
+++ b/acerca.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
-        <h1>Academia de Cursos Tecnológicos</h1>
+        <a href="index.html" class="logo-link">
+            <img src="imagenes/logoleft.png" alt="Logo Academia Tech" class="logoleft">
+        </a>
+        <h1>Acerca de</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="informacion.html">Información</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="acerca.html">Acerca de</a></li>
             </ul>
         </nav>
     </header>
