finalizacion del html

--- a/contacto.html
+++ b/contacto.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="icon" href="imagenes/logo.png" type="image/png">
+    <link rel="icon" href="imagenes/principal/logo.png" type="image/png">
 </head>
 <body>
     <header>
         <a href="index.html" class="logo-link">
-            <img src="imagenes/logoleft.png" alt="Logo Academia Tech" class="logoleft">
+            <img src="imagenes/principal/logoleft.png" alt="Logo Academia Tech" class="logoleft">
         </a>
         <h1>Contacto</h1>
         <nav>
@@ -28,7 +28,7 @@
             <p>Estamos aquí para responder tus preguntas. ¡No dudes en ponerte en contacto con nosotros!</p>
 
             <div class="contacto-form">
-                <img src="imagenes/contacto-imagen.jpg" alt="Imagen de contacto" width="400">
+
                 <form action="#" method="post">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
@@ -48,26 +48,23 @@
             <h3>Información de Contacto Adicional</h3>
             <div class="contacto-info">
                 <div class="info-item">
-                    <img src="imagenes/direccion-icono.png" alt="Dirección" width="30">
+
                     <p>Dirección: Calle Principal, 123</p>
                 </div>
                 <div class="info-item">
-                    <img src="imagenes/telefono-icono.png" alt="Teléfono" width="30">
+
                     <p>Teléfono: (123) 456-7890</p>
                 </div>
                 <div class="info-item">
-                    <img src="imagenes/email-icono.png" alt="Email" width="30">
+
                     <p>Email: info@academia.com</p>
                 </div>
             </div>
         </section>
 
-        <section>
-            <h3>Síguenos en Redes Sociales</h3>
-            <div class="social-media">
-                <a href="#" target="_blank"><img src="facebook-icono.png" alt="Facebook" width="30"></a>
-                <a href="#" target="_blank"><img src="twitter-icono.png" alt="Twitter" width="30"></a>
-                <a href="#" target="_blank"><img src="linkedin-icono.png" alt="LinkedIn" width="30"></a>
+
+
+
             </div>
         </section>
     </main>
