--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia de Cursos Tecnológicos</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="icon" href="imagenes/logo.png" type="image/png">
+    <link rel="icon" href="imagenes/principal/logo.png" type="image/png">
 </head>
 <body>
     <header class="header">
+
         <a href="index.html" class="logo-link">
-            <img src="imagenes/logoencabezado.png" alt="Logo Academia Tech" class="logoencabezado">
+            <img src="imagenes/principal/logoencabezado.png" alt="Logo Academia Tech" class="logoencabezado">
         </a>
 
         <h2>Academia de Cursos Tecnológicos</h2>
@@ -28,7 +29,7 @@
     <main>
         <section>
             <h2>Impulsa tu futuro con nuestros cursos tecnológicos</h2>
-            <img src="imagenes/banner.png" alt="Banner de tecnología" width="800">
+            <img src="imagenes/principal/banner.png" alt="Banner de tecnología" width="800">
             <p>En la Academia de Cursos Tecnológicos, te brindamos las herramientas y el conocimiento necesario para destacar en el mundo de la tecnología.</p>
             <p>Ofrecemos cursos prácticos y actualizados, diseñados para que aprendas de forma efectiva y puedas aplicar tus habilidades en proyectos reales.</p>
             <a href="servicios.html" class="button">Descubre nuestros cursos</a>
@@ -36,19 +37,19 @@
         <section>
             <h3>Nuestros Cursos Más Populares</h3>
             <div class="curso">
-                <img src="imagenes/curso-desarrollo-web.jpg" alt="Curso de Desarrollo Web" width="300">
+                <img src="imagenes/cursos/curso-desarrollo-web.png" alt="Curso de Desarrollo Web" width="300">
                 <h4>Desarrollo Web Full Stack</h4>
-                <p>Aprende a crear sitios web dinámicos y aplicaciones web completas con las últimas tecnologías.</p>
+                <p>Aprende a crear sitios y aplicaciones web completas con las últimas tecnologías.</p>
                 <a href="servicios.html" class="button">Más información</a>
             </div>
             <div class="curso">
-                <img src="imagenes/curso-marketing-digital.jpg" alt="Curso de Marketing Digital" width="300">
+                <img src="imagenes/cursos/curso-marketing-digital.png" alt="Curso de Marketing Digital" width="300">
                 <h4>Marketing Digital</h4>
                 <p>Domina las estrategias de marketing online y aumenta la visibilidad de tu negocio en internet.</p>
                 <a href="servicios.html" class="button">Más información</a>
             </div>
             <div class="curso">
-                <img src="imagenes/curso-ciencia-datos.jpg" alt="Curso de Ciencia de Datos" width="300">
+                <img src="imagenes/cursos/curso-ciencia-datos.png" alt="Curso de Ciencia de Datos" width="300">
                 <h4>Ciencia de Datos</h4>
                 <p>Descubre el poder de los datos y aprende a analizarlos para tomar decisiones inteligentes.</p>
                 <a href="servicios.html" class="button">Más información</a>
@@ -57,11 +58,11 @@
         <section>
             <h3>Testimonios</h3>
             <div class="testimonio">
-                <img src="imagenes/testimonio-1.jpg" alt="Testimonio de Juan Pérez" width="100">
+                <img src="imagenes/iconos/testimonio-2.png" alt="Testimonio de Juan Pérez" width="75">
                 <p>"Gracias a la Academia, conseguí mi primer trabajo como desarrollador web. ¡Los cursos son excelentes!" - Juan Pérez</p>
             </div>
             <div class="testimonio">
-                <img src="imagenes/testimonio-2.jpg" alt="Testimonio de María García" width="100">
+                <img src="imagenes/iconos/testimonio-2.png" alt="Testimonio de María García" width="75">
                 <p>"El curso de marketing digital me ayudó a aumentar las ventas de mi tienda online. ¡Lo recomiendo totalmente!" - María García</p>           
             </div>
         </section>
