--- a/informacion.html
+++ b/informacion.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información del Sistema</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="icon" href="imagenes/logo.png" type="image/png">
+    <link rel="icon" href="imagenes/principal/logo.png" type="image/png">
 </head>
 <body>
     <header>
         <a href="index.html" class="logo-link">
-            <img src="imagenes/logoleft.png" alt="Logo Academia Tech" class="logoleft">
+            <img src="imagenes/principal/logoleft.png" alt="Logo Academia Tech" class="logoleft">
         </a>
 
         <h1>Informacion</h1>
@@ -36,15 +36,15 @@
                 <li>Acceso a materiales de estudio</li>
                 <li>Información de contacto y soporte</li>
             </ul>
-            <img src="interfaz-web.jpg" alt="Interfaz del sistema web" width="600">
+
         </section>
         <section>
             <h3>Tecnologías utilizadas:</h3>
             <p>El sistema ha sido desarrollado utilizando HTML, CSS y JavaScript, garantizando una experiencia de usuario óptima y un diseño responsivo.</p>
             <div class="tecnologias">
-                <img src="imagenes/html5.png" alt="HTML5" width="100">
-                <img src="imagenes/css3.png" alt="CSS3" width="100">
-                <img src="imagenes/javascript.png" alt="JavaScript" width="100">
+                <img src="imagenes/iconos/html5.png" alt="HTML5" width="100">
+                <img src="imagenes/iconos/css3.png" alt="CSS3" width="100">
+                <img src="imagenes/iconos/javascript.png" alt="JavaScript" width="100">
             </div>
         </section>
         <section>
@@ -52,12 +52,12 @@
             <p>Contamos con un equipo de profesionales altamente capacitados y comprometidos con la excelencia en el desarrollo web.</p>
             <div class="equipo">
                 <div class="miembro">
-                    <img src="imagenes/desarrollador-1.jpg" alt="Desarrollador 1" width="100">
+                    <img src="imagenes/iconos/testimonio-2.png" alt="Desarrollador 1" width="75">
                     <h4>Juan Pérez</h4>
                     <p>Desarrollador Front-end</p>
                 </div>
                 <div class="miembro">
-                    <img src="imagenes/desarrolladora-2.jpg" alt="Desarrolladora 2" width="100">
+                    <img src="imagenes/iconos/testimonio-2.png" alt="Desarrolladora 2" width="75">
                     <h4>María García</h4>
                     <p>Desarrolladora Back-end</p>
                 </div>
