Add script tag for external JavaScript file

--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
     <footer>
         <p>&copy; 2026 Academia de Cursos Tecnológicos</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html
