--- a/informacion.html
+++ b/informacion.html
@@ -67,5 +67,6 @@
     <footer>
         <p>&copy; 2026 Academia de Cursos Tecnológicos</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
