--- a/acerca.html
+++ b/acerca.html
@@ -74,5 +74,6 @@
     <footer>
         <p>&copy; 2026 Academia de Cursos Tecnológicos</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
