--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
         <section>
             <h3>Nuestros Cursos Más Populares</h3>
             <div class="curso">
-                <img src="imagenes/cursos/curso-desarrollo-web.png" alt="Curso de Desarrollo Web" width="300">
+                <img src="imagenes/cursos/curso-desarrollo-web.png" alt="Curso de Desarrollo Web" width="300" class="zoomable-image">
                 <h4>Desarrollo Web Full Stack</h4>
                 <p>Aprende a crear sitios y aplicaciones web completas con las últimas tecnologías.</p>
                 <a href="servicios.html" class="button">Más información</a>
             </div>
             <div class="curso">
-                <img src="imagenes/cursos/curso-marketing-digital.png" alt="Curso de Marketing Digital" width="300">
+                <img src="imagenes/cursos/curso-marketing-digital.png" alt="Curso de Marketing Digital" width="300" class="zoomable-image">
                 <h4>Marketing Digital</h4>
                 <p>Domina las estrategias de marketing online y aumenta la visibilidad de tu negocio en internet.</p>
                 <a href="servicios.html" class="button">Más información</a>
             </div>
             <div class="curso">
-                <img src="imagenes/cursos/curso-ciencia-datos.png" alt="Curso de Ciencia de Datos" width="300">
+                <img src="imagenes/cursos/curso-ciencia-datos.png" alt="Curso de Ciencia de Datos" width="300" class="zoomable-image">
                 <h4>Ciencia de Datos</h4>
                 <p>Descubre el poder de los datos y aprende a analizarlos para tomar decisiones inteligentes.</p>
                 <a href="servicios.html" class="button">Más información</a>
@@ -58,11 +58,11 @@
         <section>
             <h3>Testimonios</h3>
             <div class="testimonio">
-                <img src="imagenes/iconos/testimonio-2.png" alt="Testimonio de Juan Pérez" width="75">
+                <img src="imagenes/iconos/testimonio-2.png" alt="Testimonio de Juan Pérez" width="75" class="zoomable-image">
                 <p>"Gracias a la Academia, conseguí mi primer trabajo como desarrollador web. ¡Los cursos son excelentes!" - Juan Pérez</p>
             </div>
             <div class="testimonio">
-                <img src="imagenes/iconos/testimonio-2.png" alt="Testimonio de María García" width="75">
+                <img src="imagenes/iconos/testimonio-2.png" alt="Testimonio de María García" width="75" class="zoomable-image">
                 <p>"El curso de marketing digital me ayudó a aumentar las ventas de mi tienda online. ¡Lo recomiendo totalmente!" - María García</p>           
             </div>
         </section>
@@ -72,4 +72,4 @@
     </footer>
     <script src="script.js"></script>
 </body>
-</html
+</html>
