Add zoomable class to technology and team images

--- a/informacion.html
+++ b/informacion.html
@@ -42,9 +42,9 @@
             <h3>Tecnologías utilizadas:</h3>
             <p>El sistema ha sido desarrollado utilizando HTML, CSS y JavaScript, garantizando una experiencia de usuario óptima y un diseño responsivo.</p>
             <div class="tecnologias">
-                <img src="imagenes/iconos/html5.png" alt="HTML5" width="100">
-                <img src="imagenes/iconos/css3.png" alt="CSS3" width="100">
-                <img src="imagenes/iconos/javascript.png" alt="JavaScript" width="100">
+                <img src="imagenes/iconos/html5.png" alt="HTML5" width="100" class="zoomable-image">
+                <img src="imagenes/iconos/css3.png" alt="CSS3" width="100" class="zoomable-image">
+                <img src="imagenes/iconos/javascript.png" alt="JavaScript" width="100" class="zoomable-image">
             </div>
         </section>
         <section>
@@ -52,12 +52,12 @@
             <p>Contamos con un equipo de profesionales altamente capacitados y comprometidos con la excelencia en el desarrollo web.</p>
             <div class="equipo">
                 <div class="miembro">
-                    <img src="imagenes/iconos/testimonio-2.png" alt="Desarrollador 1" width="75">
+                    <img src="imagenes/iconos/testimonio-2.png" alt="Desarrollador 1" width="75" class="zoomable-image">
                     <h4>Juan Pérez</h4>
                     <p>Desarrollador Front-end</p>
                 </div>
                 <div class="miembro">
-                    <img src="imagenes/iconos/testimonio-2.png" alt="Desarrolladora 2" width="75">
+                    <img src="imagenes/iconos/testimonio-2.png" alt="Desarrolladora 2" width="75" class="zoomable-image">
                     <h4>María García</h4>
                     <p>Desarrolladora Back-end</p>
                 </div>
